--- a/.github/workflows/run_main.yml
+++ b/.github/workflows/run_main.yml
@@ -1,29 +1,27 @@
-name: Run Python Script
+name: Run main.py
 
 on:
-  schedule:
-    - cron: '0 */6 * * *'  # Запускать скрипт каждые 6 часов
   push:
     branches:
-      - main  # Запуск при пуше в основную ветку
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
-  run:
-    runs-on: ubuntu-latest  # Используем последний образ Ubuntu для запуска
-    
+  build:
+    runs-on: ubuntu-latest
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2  # Клонируем репозиторий
-
+    - name: Checkout repository
+      uses: actions/checkout@v2
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.8'  # Устанавливаем Python 3.8
-
+        python-version: '3.8'
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt  # Устанавливаем зависимости
-
-    - name: Run the script
-      run: python main.py  # Запускаем твой скрипт
+        pip install -r requirements.txt
+    - name: Run main.py
+      run: |
+        python main.py
